# FalkorDB-Loader-RS

./: CHANGELOG.md  CHANGELOG_INLINE_CYPHER.md  Cargo.toml  EDGE_LOADING_OPTIMIZATION.md  INLINE_CYPHER_APPROACH.md  README.md  README_INLINE_CYPHER.md
src/: main.rs
