[package]
name = "falkordb-loader-rs"
version = "0.1.2"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
falkordb = { version = "0.1.11", features = ["tokio"] }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
regex = "1.0"

[[bin]]
name = "falkordb-loader"
path = "src/main.rs"