[package]
name = "falkordb-loader-rs"
version = "0.1.2"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
falkordb = { git = "https://github.com/FalkorDB/falkordb-rs", branch = "main", features = ["tokio"] }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
regex = "1.0"

[[bin]]
name = "falkordb-loader"
path = "src/main.rs"